[package]
name = "cpal"
version = "0.8.1"
authors = ["The CPAL contributors", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Low-level cross-platform audio playing library in pure Rust."
repository = "https://github.com/tomaka/cpal"
documentation = "https://docs.rs/cpal"
license = "Apache-2.0"
keywords = ["audio", "sound"]

[dependencies]
lazy_static = "0.2"
opensles-sys = {git="https://github.com/alanpoon/opensles-sys.git", branch="improvement"}
android_glue = {version ="0.2.3"}
conrod = { git ="https://github.com/PistonDevelopers/conrod.git", branch="master", features = ["glium","winit"]}
glium = { version = "0.22"}
image = "*"
rusttype = "*"
rand = "*"

[lib]
name = "cpal"
path = "src/lib.rs"

[[bin]]
name = "cpal"
path = "src/bin/main.rs"

[dev-dependencies]
hound = "3.0"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["audiosessiontypes", "audioclient", "coml2api", "combaseapi", "debug", "devpkey", "handleapi", "ksmedia", "mmdeviceapi", "objbase", "std", "synchapi", "winuser"] }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
alsa-sys = { version = "0.1", path = "alsa-sys" }
libc = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
coreaudio-rs = { version = "0.9.0", default-features = false, features = ["audio_unit", "core_audio"] }
core-foundation-sys = "0.5.1" # For linking to CoreFoundation.framework and handling device name `CFString`s.

[target.'cfg(target_os = "emscripten")'.dependencies]
stdweb = { version = "0.1.3", default-features = false }

[package.metadata.android]
package_name = "com.github.apoon1.cpal"
label = "cpal"
android_version = 18
target_sdk_version = 18
min_sdk_version = 18
build_targets = ["arm-linux-androideabi"]
assets = "assets"
fullscreen = true

[package.metadata.android.activity_attributes]
"android:screenOrientation" = "sensorLandscape"
"android:uiOptions" = "none"